fix: fix and refactors code for improved readability
Addresses minor code style issues identified by Sourcery.
This commit focuses on improving code readability and consistency
by destructuring objects and correcting a typo, without
altering the core functionality. Also, clears a timeout in destroy function.

--- a/src/scss/02-tools/_m-select-custom.scss
+++ b/src/scss/02-tools/_m-select-custom.scss
@@ -65,8 +65,4 @@
 			outline: none;
 		}
 	}
-
-	@include rtl {
-		background-position: left 10px top 50%, 0 0;
-	}
 }
